Fixed CSS overflow error

--- a/grid.css
+++ b/grid.css
@@ -41,4 +41,8 @@
 	line-height: 2em;
 	font-size: 1em;
 	font-weight: bold;
+	
+	overflow:hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
